# finch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
dockers/: Dockerfile  mips-qemu.dockerfile
docs/: mips-linux-memory.md
helpers/: constants.c  fstat64.c  sizes.c
lib/: lib.rs  unicorn_verify_amd64.rs  unicorn_verify_mips.rs  unicorn_verify_x86.rs
lib/executor/: driver.rs  hash_expression.rs  memory.rs  mod.rs  state.rs  state_translator.rs  successor.rs  symbolic_string.rs  trace.rs
lib/platform/: mod.rs
lib/platform/linux/: amd64.rs  constants.rs  environment.rs  file_descriptor.rs  filesystem.rs  linux.rs  linux_.rs  mips.rs  mod.rs
scripts/: falcon.glu  finch.glu  hook.glu  libc.glu  symdriver.glu  symsolve.glu  utility.glu
src/: bindings.rs  debugger.rs  driver.rs  hooks.rs  interpreter.rs  main.rs
