[package]
name = "falcon-finch"
version = "0.4.6"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/finch"
description = "Symbolic Execution against Falcon IL"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
clap = "2.33"
error-chain = "0.12"
falcon = "0.4.11"
falcon_capstone = "0.4.0"
falcon-z3 = "0.4.11"
goblin = "0.2"
lazy_static = "1.4"
log = "0.4"
nom = "5.1"
rayon = "1.0"
rustyline = "6.0.0"
serde = "1.0"
serde_derive = "1.0"
simplelog = "0.7"
unicorn = "0.9.1"

[lib]
name = "finch"
path = "lib/lib.rs"

[[bin]]
name = "finch-bin"
path = "src/main.rs"

[features]
capstone4 = ["falcon/capstone4"]

[profile.release]
debug = 2