[package]
name = "falcon-finch"
version = "0.5.2"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/finch"
description = "Symbolic Execution against Falcon IL"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
clap = "2.33"
error-chain = "0.12"
falcon = "0.5.2"
falcon_capstone = "0.5.0"
falcon-z3 = "0.5.2"
goblin = "0.4"
lazy_static = "1.4"
log = "0.4"
nom = "6.2"
rayon = "1.0"
rustyline = "9"
serde = "1.0"
serde_derive = "1.0"
simplelog = "0.10"
# unicorn = "0.9.1"

[lib]
name = "finch"
path = "lib/lib.rs"

[[bin]]
name = "finch-bin"
path = "src/main.rs"

[features]
capstone4 = ["falcon/capstone4"]
thread_safe = ["falcon/thread_safe"]

[profile.release]
debug = 2